--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,10 @@
         "src": "/(.*)",
         "dest": "server.js"
       }
+    ],
+    "rewrites": [
+      { 
+      "source": "/(.*)", 
+      "destination": "/" }
     ]
   }
