--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,18 +3,13 @@
     "builds": [
       {
         "src": "server.js",
-        "use": "@now/node"
+        "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "server.js"
+        "dest": "/"
       }
-    ],
-    "rewrites": [
-      { 
-      "source": "/(.*)", 
-      "destination": "/server.js" }
     ]
   }
