--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0"
+  },
+  "devDependencies": {
+    "@vercel/node": "^3.0.17"
   }
 }
