--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,10 +6,10 @@
         "use": "@vercel/node"
       }
     ],
-    "rewrites": [
-      { 
-        "source": "/(.*)", 
-        "destination": "/" 
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
